Add support for extends statement in ClassBodyWrapper.
Add support to override extended class via extends Statement in ClassBodyWrapper.
Enhance CompilerTaskTest to cover wrapped class body and extending shared classes.